tests/cases/compiler/defaultKeywordWithoutExport2/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/defaultKeywordWithoutExport2.ts`, Apache-2.0 License

default function () {

}
//~^^^ ERROR: Expected 'export'.
//~|   ERROR: Identifier expected.